# advance_robotic

./: README.md  comamnd  comandi_lanciare
Commands/: docker_comand  ex_1  ex_3  ex_4  git_command  open_terminal.sh  ros1_robot
arm_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
arm_controllers/action/: MotionControl.action
arm_controllers/include/utils/: gravity_comp_controller.h
arm_controllers/msg/: ArucoTracker.msg  ExtendedVector3.msg  PoseError.msg.msg  TrajectoryPhase.msg  TrajectoryPlan.msg
arm_controllers/scripts/: Yolo.py  aruco_movment.py  aruco_traker_topic.py  arunco_vs.py  camera_transform.py  controll_publisher.py  depth.py  joint_state_printer.py  launch_torch_node.sh  movment_publisher.py  plan_final.py  potential_forces.py  subs.py  trajectory_planning.py
arm_controllers/src/: adaptive_variable_impedance_controller.cpp  adaptive_variable_impedance_controller2.cpp  adaptive_variable_impedance_controller_2.cpp  clock_publisher.cpp  computed_torque_controller.cpp  gravity_comp_controller.cpp  motion_switcher_node.cpp
arm_controllers/srv/: UpdateThresholds.srv
aruco_ros/aruco_ros/launch/: single.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
eigen_kdl_examples/src/: eigen.cpp  kdl.cpp
elfin/elfin_description/urdf/: _d435.urdf.xacro  elfin3.urdf.xacro  elfin3_experiment1.urdf.xacro
elfin/elfin_gazebo/config/: computed_torque_controller.yaml  gravity_comp_controller.yaml
elfin/elfin_gazebo/launch/: detection_word.launch  elfin3_empty_world.launch  elfin3_experiment1_world.launch  elfin3_experiment2_world.launch  obstacol_word.launch
elfin/elfin_gazebo/models/aruco_marker/: cilindre.sdf  model.sdf  wall.sdf
elfin/elfin_gazebo/models/object_det/: banana_model.sdf  model.sdf  model_car.sdf
elfin/elfin_gazebo/models/object_det/materials/scripts/: marker.material  marker_banana.material  marker_red.material
ros2_temp/: ROS2 command.txt  TASK 1 Turtle sim.txt  TASK 4.txt  TASK3.txt
