<?xml version="1.0"?>
<package format="2">
  <name>arm_controllers</name>
  <version>0.0.3</version>
  <description>Robot Arm Controllers</description>

  <maintainer email="kyungmin5257@gmail.com">kyungmin</maintainer>
  <maintainer email="babchol@gmail.com">Hancheol Choi</maintainer>
  <maintainer email="kjy880527@gmail.com">Jungyeong Kyungmin5257</maintainer>

  <license>MIT</license>

  <!-- Buildtool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>controller_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend> <!-- Added -->

  <!-- Run dependencies -->
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend> <!-- Added -->
  
  <exec_depend>python3</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
